fixed overlapping elements

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
     color: white;
     font-family: 'Rubik', sans-serif;
     
-    
 }
 
 .navbar {
@@ -256,6 +255,20 @@ address {
 
 @media (max-width: 768px) {
 
+    
+
+    .contact-address {
+        font-size: 0.73rem;
+         }
+
+    .btn3.one {
+        left: 300px;
+    }
+
+    .btn3.two {
+        left: 0px;
+    }
+
      .navbar {
     gap: 20px;
     width: 100vw;
@@ -267,6 +280,7 @@ address {
     grid-template-columns: 1fr;
     padding: 20px;
     gap: 30px;
+    
     }
 
     .introduction1 {
